--- a/Budget.hasona23/Budget.hasona23/Views/Transaction/Index.cshtml
+++ b/Budget.hasona23/Budget.hasona23/Views/Transaction/Index.cshtml
@@ -4,28 +4,67 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h1>{Transactions}</h1>
+<h5>Found @Model.Count() Transactions</h5>
+<div class="flex-md-row container justify-content-center ">
+    <button type="button" class="btn btn-primary btn-create">
+        Create New
+    </button>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Filter
+        </button>
+        <ul class="dropdown-menu">
+            <form class="flex-fill " asp-controller="Transaction" asp-action="Index" method="get">
+                <div class="search d-inline">
+                    <label>Search</label>
+                    <input type="text" name="searchString" value="@ViewData["SearchString"]"/>
+                </div>
+                <div class="priceSearch">
+                    <label>Min Price</label>
+                    <input type="number" min=0 name="minPrice" value="@ViewData["MinPrice"]"/>
+                    <label>Max Price</label>
+                    <input type="number" min=0 name="maxPrice" value="@ViewData["MaxPrice"]"/>
+                </div>
+                <div class="dateSearch d-inline">
+                    <label>Min Date</label>
+                    <input type="date" name="minDate" value="@ViewData["MinDate"]"/>
+                </div>
+                <div class="form-group">
+                    <select name="categoryId" value="@ViewData["CategoryId"]">
+                        <option value="-1">None</option>
+                        @foreach (var category in (List<CategoryModel>)ViewData["Categories"]!)
+                        {
+                            <option value="@category.Id">@category.Name</option>
+                        }
+                    </select>
+                </div>
+                <input type="submit" value="Search"/>
+            </form>
+        </ul>
+    </div>
+</div>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Details)
-            </th>
-            <th></th>
-        </tr>
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Date)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Details)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Category)
+        </th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Date)
@@ -37,10 +76,64 @@
                 @Html.DisplayFor(modelItem => item.Details)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @Html.DisplayFor(modelItem => item.Category.Name)
+            </td>
+            <td>
+                <button class="btn btn-warning edit-btn" data-id="@item.Id">Edit</button>
+                <button class="btn btn-danger delete-btn" data-id="@item.Id">Delete</button>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
+<!-- Create Modal -->
+<div class="modal fade" id="createModal">
+    <div class="modal-dialog">
+        <div class="modal-content" id="createModalContent">
+        </div>
+    </div>
+</div>
+
+<!-- Edit Modal -->
+<div class="modal fade" id="editModal">
+    <div class="modal-dialog">
+        <div class="modal-content" id="editModalContent">
+            <!-- Modal content will be loaded here -->
+        </div>
+    </div>
+</div>
+
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteModal">
+    <div class="modal-dialog">
+        <div class="modal-content" id="deleteModalContent">
+            <!-- Modal content will be loaded here -->
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        $(function () {
+            // Create Modal
+            $(document).on('click', '.btn-create', function () {
+                $('#createModal').modal('show');
+                $('#createModalContent').load('@Url.Action("Create", "Transaction")');
+            });
+
+            // Edit Modal
+            $(document).on('click', '.edit-btn', function () {
+                var id = $(this).data('id');
+                $('#editModal').modal('show');
+                $('#editModalContent').load('@Url.Action("Edit", "Transaction")/' + id);
+            });
+
+            // Delete Modal
+            $(document).on('click', '.delete-btn', function () {
+                var id = $(this).data('id');
+                $('#deleteModal').modal('show');
+                $('#deleteModalContent').load('@Url.Action("Delete", "Transaction")/' + id);
+            });
+        });
+    </script>
+}
