Make fields required and minor changes

--- a/Budget.hasona23/Budget.hasona23/Views/Transaction/Edit.cshtml
+++ b/Budget.hasona23/Budget.hasona23/Views/Transaction/Edit.cshtml
@@ -21,7 +21,7 @@
             <input type="date" name="Date" class="form-control" value="@Model.Date" required/>
         </div>
         <div class="form-group">
-            <select required="required" name="CategoryId">
+            <select required name="CategoryId">
                 @foreach (var category in (List<CategoryModel>)ViewData["Categories"]!)
                 {
                     <option value="@category.Id" >@category.Name</option>
