--- a/Budget.hasona23/Budget.hasona23/Views/Transaction/Create.cshtml
+++ b/Budget.hasona23/Budget.hasona23/Views/Transaction/Create.cshtml
@@ -19,7 +19,7 @@
             <input type="date" name="Date" class="form-control" required />
         </div> 
         <div class="form-group">
-            <select required="required" name="CategoryId">
+            <select required name="CategoryId">
                 @foreach (var category in (List<CategoryModel>)ViewData["Categories"]!)
                 {
                     <option value="@category.Id" >@category.Name</option>
